# loresmith

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  REFACTORING_PLAN.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  full-story-test.json  lore.proto  main.py  openrouter_client.py  requirements-dev.txt  requirements.txt
python-service/: .dockerignore  Dockerfile  lore_pb2.py  lore_pb2.pyi  lore_pb2_grpc.py  lore_servicer.py  pyproject.toml  pyrightconfig.json  start.sh
python-service/adventure/models/: __init__.py  inventory.py  outcome.py  party.py  scene.py
python-service/adventure/orchestrators/: __init__.py  adventure_orchestrator.py
python-service/chains/: character.py  event.py  faction.py  full_story.py  multi_variant.py  relic.py  setting.py
python-service/config/: settings.py
python-service/constants/: themes.py
python-service/exceptions/: adventure.py  base.py  generation.py  openrouter.py  redis.py
python-service/generate/: __init__.py  flaw_templates.py
python-service/generate/chains/: character.py  event.py  faction.py  full_story.py  multi_variant.py  relic.py  setting.py
python-service/generate/chains/character/: appearance_tracker.py  character.py  flaw_templates.py  name_loader.py  name_tracker.py  traits.py
python-service/generate/models/: full_story.py  generated_lore_bundle.py  lore_piece.py  selected_lore_pieces.py
python-service/generate/models/structured_llm_output/: character_schema.py  event_schema.py  faction_schema.py  relic_schema.py  setting_schema.py
python-service/generate/orchestrators/: orchestrator_full_story.py  orchestrator_lore_variants.py
python-service/generate/prompts/character/: character_appearance.txt  character_backstory.txt  character_flaw.txt  character_name.txt  character_personality.txt  character_skills.txt  character_stats.txt  character_traits.txt
python-service/generate/prompts/event/: event_description.txt  event_impact.txt  event_name.txt
python-service/generate/prompts/faction/: faction_appearance.txt  faction_ideology.txt  faction_name.txt  faction_summary.txt
python-service/generate/prompts/full_story/: full_story.txt  quest_description.txt  (+1 more)
python-service/models/: full_story.py  generated_lore_bundle.py  lore_piece.py
python-service/orchestrators/: orchestrator_full_story.py  orchestrator_lore_variants.py
python-service/prompts/character/: character_appearance.txt  character_backstory.txt  character_flaw.txt  character_name.txt  character_personality.txt  character_skills.txt  character_stats.txt
python-service/prompts/event/: event_description.txt
python-service/prompts/faction/: faction_ideology.txt  faction_name.txt
python-service/prompts/full_story/: full_story.txt  quest_description.txt  quest_title.txt
python-service/prompts/relic/: relic_description.txt
python-service/prompts/setting/: setting_summary.txt
python-service/search/: README.md  bm25_indexer.py  fusion_retriever.py  query_preprocessor.py  reranker.py  tokenizer.py
python-service/services/: embedding_client.py  image_generator.py  llm_client.py  openrouter_client.py  rabbitmq.py  rate_limiter.py  redis.py  redis_client.py  redis_utils.py
python-service/services/image_gen/: generator.py  processor.py  prompt_builder.py  providers.py
python-service/services/portraits/: operations.py  worker.py
python-service/utils/: blacklist.py  format_text.py  load_prompt.py
services/generation/: main.py  pyproject.toml
(+436 files in other folders)
