[project]
name = "python-service"
version = "0.1.0"
description = "Python Service for Loresmith"
authors = [
    {name = "Maksym Dombrov",email = "maksymdombrov@gmail.com"}
]
readme = "README.md"
dependencies = [
    "grpcio (>=1.75.0,<2.0.0)",
    "grpcio-tools (>=1.75.0,<2.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "sentry-sdk (>=2.38.0,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain-core (>=0.3.79,<0.4.0)",
    "langchain-openai (>=0.3.35,<0.4.0)",
    "langchain-ollama (>=0.3.10,<0.4.0)",
    "langfuse (>=3.6.2,<4.0.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
ruff = "^0.13.1"
isort = ">=7.0.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["*_pb2*.py"]