[project]
name = "python-service"
version = "0.1.0"
description = "Python Service for Loresmith"
authors = [
    {name = "Maksym Dombrov",email = "maksymdombrov@gmail.com"}
]
readme = "README.md"
dependencies = [
    "grpcio (>=1.75.0,<2.0.0)",
    "grpcio-tools (>=1.75.0,<2.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "sentry-sdk (>=2.38.0,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain-core (>=0.3.79,<0.4.0)",
    "langchain-openai (>=0.3.35,<0.4.0)",
    "langchain-ollama (>=0.3.10,<0.4.0)",
    "langfuse (>=3.6.2,<4.0.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "numpy (>=2.1.0,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "spacy (>=3.7.0,<4.0.0)",
    "replicate (>=1.0.7,<2.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "Pillow (>=11.1.0,<12.0.0)",
    "boto3 (>=1.35.0,<2.0.0)",
    "urllib3 (>=2.0.0,<2.3.0)",
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
ruff = "^0.13.1"
isort = ">=7.0.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["*_pb2*.py"]