[project]
name = "generation"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksym Dombrov",email = "maksymdombrov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
black = "^25.1.0"
mypy = "^1.17.1"

